--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@300&display=swap');
             </style>
@@ -12,9 +13,10 @@
     <body style="color: rgb(128, 228, 195);">
     <div style="color: black;">
     <header>
-        <h1>Generación del sitio web</h1>
+        <h1>Generación del sitio web 47:29 8 de sep</h1>
+        <img src="Img/gato.jpg" style="width: 500px;height: 300px;">
     </header>
-<nav>>
+<nav>
     <ul></ul>
     <li>Portafolio</li>
     <li>Misión de negocio</li>
@@ -22,13 +24,56 @@
     <li>Temática</li>
     </ul>
 </nav>
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="Img/graficaplaca.jpg" style="width: 150px;height: 200px;" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Img/placareal.jpg" style="width: 250px;height: 200px;" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="Img/semiconductor.jpg" style="width: 250px;height: 200px;" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
 <div style="background-color: black;">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis voluptatum tempora praesentium neque molestiae error, blanditiis eius! At saepe modi repellat cum tenetur dicta nihil, magni quos omnis, incidunt maxime.</p>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo minus quos, illo porro aut perspiciatis. Inventore vero, velit ipsam nulla quos incidunt repudiandae consequuntur nobis doloremque praesentium, atque odio animi.</p>
 </div>
+<section style="background-color: brown;">
+    <article style="color: black;">
+        <h1>Contenido de imágenes</h1>
+        <img src="Img/graficaplaca.jpg" style="width: 250px;height: 200px;">
+        <img src="Img/placareal.jpg" style="width: 250px;height: 200px;">
+        <img src="Img/semiconductor.jpg" style="width: 250px;height: 200px;">
+        <p>Las imágenes están reservadas a derechos de autor</p>
+    </article>
+    <p style="color: black;">Contáctanos</p>
+</section>
 
+<section style="background-color: burlywood;">
+    <article>
+        <h1>Quiénes somos</h1>
+        <h1 style="color: black;">VISIÓN</h1>
+        <p>LLevar estos productos a cada rincón del país, manejando calidad y ofreciendo confianza en los 
+            tiempos de entrega y asegurando el estado del producto, haaciendo un testeo de cada uno antes de su venta.
+        </p>
+        <h1 style="color: black;">MISIÓN</h1>
+    </article>
+    <p style="color: black;">Contáctanos</p>
+</section>
     <footer style="background-color: cornflowerblue;">Derechos de autor Copyright 23424@*</footer>
     </body>
 </html>
